<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_list_item_margin"
    tools:context=".transportes.TransporteComboio">

    <TextView
        android:id="@+id/de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_list_item_margin"
        android:layout_marginTop="@dimen/small_list_item_margin"
        android:text="@string/de"
        app:layout_constraintEnd_toStartOf="@+id/destino_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para"
        android:layout_marginStart="@dimen/small_list_item_margin"
        android:layout_marginTop="@dimen/small_list_item_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/de" />

    <Spinner
        android:id="@+id/origem_text"
        android:layout_width="187dp"
        android:layout_height="19dp"
        android:layout_marginStart="@dimen/small_list_item_margin"
        android:layout_marginTop="@dimen/small_list_item_margin"
        app:layout_constraintStart_toEndOf="@+id/de"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/destino_text"
        android:layout_width="187dp"
        android:layout_height="19dp"
        android:layout_marginStart="@dimen/small_list_item_margin"
        android:layout_marginTop="@dimen/small_list_item_margin"
        app:layout_constraintStart_toEndOf="@+id/para"
        app:layout_constraintTop_toBottomOf="@+id/origem_text" />

    <Button
        android:id="@+id/pesquisaComboio_botao"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="@drawable/button_round_borders"
        android:text="@string/pesquisa"
        android:textColor="@color/branco"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/destino_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/destino_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/empresas_titulo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/empresa"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/list_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/destino_text" />

            <TextView
                android:id="@+id/horarios"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/list_text_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/empresas_titulo"
                app:layout_constraintTop_toBottomOf="@+id/pesquisaComboio_botao" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lista_transportes"
            android:background="@drawable/square_borders"
            android:layout_marginEnd="@dimen/list_text_title"
            android:layout_marginStart="@dimen/list_text_title"
            android:layout_marginBottom="@dimen/list_text_title"/>
        </FrameLayout>
    </LinearLayout>
</layout>