<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".roteiro.Roteiros">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            style="@style/EstiloLetraTitulos"
            android:id="@+id/titulo_roteiros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/roteiros"
            android:background="@drawable/top_bottom_strokes"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pesquisaRoteiros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aventura"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin">

            <ListView
                android:id="@+id/roteiroList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <ImageButton
                android:id="@+id/botaoAdicionar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/oval_button"
                android:contentDescription="@string/botão_adicionar"
                android:src="@drawable/ic_add_white_24dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </RelativeLayout>

    </LinearLayout>

</layout>