<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".restaurantes.Restaurantes">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/backarrow"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_list_item_margin"
        android:layout_marginTop="@dimen/small_list_item_margin"
        android:background="@color/fui_transparent"
        android:contentDescription="@string/hoteis"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titulo_roteiros"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_roteiros"
        style="@style/EstiloLetraTitulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bottom_strokes"
        android:text="@string/restaurantes"
        android:textAlignment="center"
        android:padding="@dimen/list_text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nome_roteiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_restaurantes"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ListView
            android:id="@+id/restaurantes_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

</layout>